project/rabbitmq/rabbitmq-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mq
  namespace: dev
  labels:
    app: mq
spec:
  nodeSelector:
    ecaicn.com/persistent-env: dev
  containers:
  - name: mq
    image: docker.io/rabbitmq:3.7-rc-management
    ports:
    - containerPort: 5672
      containerPort: 15672
    volumeMounts:
    - name: timezone
      mountPath: /etc/timezone
      subPath: timezone
      readOnly: yes
    - name: localtime
      mountPath: /etc/localtime
      readOnly: yes
    - mountPath: /var/lib/rabbitmq
      name: mq-data
  volumes:
  - name: mq-data
    hostPath:
      path: /data/volumes/rabbitmq
  - name: timezone
    configMap:
      name: timezone
  - name: localtime
    hostPath:
      path: /usr/share/zoneinfo/Asia/Shanghai
