project/rabbitmq/rabbitmq-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-id: "lb-wz9t7k8kvc6a86ryxm2sf"
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-force-override-listeners: "true"
  name: rabbitmq-lb
  namespace: dev
spec:
  ports:
  - port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    app: mq
  type: LoadBalancer
