project/rabbitmq/rabbitmq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mq
  namespace: dev
spec:
  type: ClusterIP
  ports:
  - port: 5672
    targetPort: 5672
    name: client
  - port: 15672
    targetPort: 15672
    name: http
  selector:
    app: mq
